ops/reverse-proxy-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress
  template:
    metadata:
      labels:
        app: ingress
    spec:
      containers:
        - name: ingress
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: ingress
spec:
  selector:
    app: ingress
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
